# education_smart_systems_advanced_c_lang

hw1/: CMakeLists.txt  task0.c  task1.c  task10.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
hw2/: CMakeLists.txt  task0.c  task1.c
hw3/: CMakeLists.txt  main.c  point.h  point_vector.h  snake.c  snake.h
hw4/: main.c  snake.c  snake.h
hw5/: CMakeLists.txt  task0.c  task1.c  task2.c
hw6/: main.c  point_vector.c
hw7/: task0.c  task1.c  task2.c
hw8/: Makefile  deps.mk  main.c  math_functions.c  math_functions.h  root_and_integral.c  root_and_integral.h  test_root_and_integral.c  test_root_and_integral.h
